syntax = "proto3";

import "com/kamus/common/GitEntities.proto";

package com.kamus.loaderconfig.grpcjava;

option java_multiple_files = true;
option java_package = "com.kamus.loaderconfig.grpcjava";

message TrackRepositoryRequest {
  com.kamus.common.grpcjava.Repository repository = 1;
}

message AssignedRepository {
  com.kamus.common.grpcjava.Repository repository = 1;
  int32 bucketId = 2;
}

message GetLoaderForBucketRequest {
  int32 bucketId = 1;
}

message LoaderForBucket {
  string loaderId = 1;
  string loaderEndpoint = 2;
}

message NoActiveLoader {

}

message GetLoaderForBucketResponse {
  oneof assignedLoaderOneOf {
    LoaderForBucket loader = 1;
    NoActiveLoader noActiveLoader = 2;
  }
}

service LoaderConfigurationService {
  rpc getLoaderForBucket(GetLoaderForBucketRequest) returns (GetLoaderForBucketResponse);
}
